--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -1,65 +1,42 @@
-/* body {
-   font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-   line-height: 1.5;
-   background-color: #e7e9e7;
- } */
- .country {
-  background: rgba(255, 255, 255, 0.2);
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  height: 240px;
+  background-color: rgba(255, 255, 255, 0.2);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  color: #212121;
+}
+
+.country {
+  background: rgba(196, 191, 191, 0.2);
   padding: 10px;
   max-width: 700px;
 }
 
-.search {
-padding: 50px 0;
-}
-
-h2 {
-font-size: 32px;
-color: #2a2a2a;
+h1 {
+  font-size: 32px;
+  color:rgba(255, 255, 255, 0.2);
 }
 
 .countryNameInput {
- padding: 5px;
- font-size: 18px;
- width: 100%;
- border: #adadad 3px solid !important;
- border-radius: 6px;
- background: #d2d6c6;
+  padding: 5px;
+  font-size: 18px;
+  width: 100%;
+  border: none;
+  border-radius: 6px;
+  background: #d2d6c6;
 }
 
 .card {
-display: flex;
+  display: flex;
 }
 
-
-/* 
-* {
-box-sizing: border-box;
-} */
-
-
-body {
-height: 240px;
-// Путь к изображениям из SASS-файла всегда такой, как из папки css
-background: url('https://forvardplast.ru/800/600/https/catherineasquithgallery.com/uploads/posts/2021-02/1614509615_130-p-fon-belaya-kirpichnaya-stena-176.jpg');
-background-repeat: no-repeat;
-background-size: cover;
-background-attachment: fixed;
-color: #2f4f4f;
-}
-
-/* .countryNameInput {
-padding: 10px;
-border: none;
-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 2.2px;
-} */
 .countryNameInput:focus,
 .countryNameInput:active {
-outline-color: #2f4f4f;
+  outline-color: #2f4f4f;
 }
-/* .card {
-display: flex;
-} */
-.img_flag {
-margin: 20px 0 0 40px;
-}
+
+// .img_flag {
+// margin: 20px 0 0 40px;
+// }
