--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   height: 240px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-image: url(../images/Earth.jpg) ;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -16,7 +16,7 @@ body {
 
 h1 {
   font-size: 32px;
-  color:rgba(255, 255, 255, 0.2);
+  color:rgba(10, 10, 10, 0.2);
 }
 
 .countryNameInput {
