--- a/src/templates/countryCard.hbs
+++ b/src/templates/countryCard.hbs
@@ -15,6 +15,6 @@
 
     </ul>
 </div>
-<img src="{{flag}}" alt="флаг {{name}}" width=300 class='img_flag'>`;
+<img class='img_flag' src="{{flag}}" alt="флаг {{name}}" width='300'/>;
 
 {{/each}}
