--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -1,8 +1,17 @@
-body {
-  width: 100%;
+html {
+  box-sizing: border-box;
+}
 
-  font-family: Arial, Helvetica, sans-serif;
-  background-image: url(../images/Earth.jpg) ;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;  
+
+  background: url('https://krot.mobi/uploads/posts/2020-02/thumbs/1580822408_1-1.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -10,20 +19,13 @@ body {
 }
 
 .country {
-  background: rgba(196, 191, 191, 0.2);
-  padding: 10px;
+  padding: 50px;
   max-width: 700px;
 }
 
 h1 {
   font-size: 32px;
   color:rgb(10, 10, 10);
-}
-
-.img {
-  display: block;
-  max-width: 100%;
-  height: auto;
 }
 
 .countryNameInput {
@@ -45,5 +47,7 @@ h1 {
 }
 
 .img_flag {
-  margin: 20px 0 0 40px;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
